# labvault

./: .coverage  .env.example  .firebaserc  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  firebase.json  firestore.indexes.json  pyproject.toml  report.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  publish-pypi.yml
docs/: SPEC.md  ar_cleanup_policy.md  auth_design.md  backlog.md  comparison_report.md  firestore_indexes.md  instrument_pc_setup.md  mdg_integration.md  multitenant_next_steps.md  onboarding.md  parser_formats.md  progress_2026h1.md  qa_checklist.md  qa_findings_2026-06-02.md  qa_findings_2026-06-02_round2.md
docs/design/: DB_SELECTION.md  DEVELOPMENT_WORKFLOW.md  REQUIREMENTS.md  analysis_traceability.md  mcp_remote_hosting.md
docs/design/v10/: 00_v10_overview.md  01_architecture_and_cost.md  02_sdk_and_mcp.md  03_experiment_workflow.md  04_sdk_cookbook.md  05_milestones.md  v10-conceptual-review-revised.md  v10-conceptual-review.md
docs/design/v7/: 00_v7_synthesis.md  01_sdk_design.md  02_platform_design.md  03_final_validation.md
docs/design/v8/: 00_v8_synthesis.md  01_sdk_implementation_spec.md  02_platform_implementation_spec.md  03_final_milestones.md
docs/design/v9/: 00_v9_overview.md  01_sdk_implementation.md  02_platform_implementation.md  03_sandbox_design.md  04_test_design.md  05_milestones.md  v9-review.md
examples/: 01_quickstart.ipynb  02_instrument_script.py  03_search_and_organize.ipynb  README.md
examples/.ipynb_checkpoints/: 01_quickstart-checkpoint.ipynb  02_instrument_script-checkpoint.py  03_search_and_organize-checkpoint.ipynb
platform/: README.md
platform/backend/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  requirements.txt  seed_admin.py
platform/backend/app/: artifact_registry.py  auth.py  dependencies.py  main.py  notifications.py  observability.py  permissions.py  schemas.py  secrets_util.py  share_links.py
platform/backend/app/routers/: bulk_upload.py  files.py  mcp.py  metadata.py  preview.py  pypi_proxy.py  records.py  search.py  share_links.py
platform/backend/tests/: conftest.py  test_admin_authz.py  test_admin_safety.py  test_analyst_write.py  test_auth.py  test_auth_endpoints.py  test_children_conditions_units.py  test_cors_exception_handler.py  test_critical_n4_to_n8.py  test_files_original_type.py  test_firestore_lifecycle.py  test_mcp_remote.py  test_no_store_header.py  test_observability.py  test_pypi_proxy.py  test_record_shares.py  test_record_template_required.py  test_record_template_result_fields.py  test_records_aggregate.py  test_records_cell_logs.py  test_records_filters.py  test_records_template_filter.py  test_share_events.py  test_share_inheritance.py  test_share_link.py  test_shared_with_me.py
platform/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
platform/frontend/src/app/: layout.tsx  page.tsx
platform/frontend/src/app/account/tokens/: page.tsx
platform/frontend/src/app/admin/pending/: page.tsx
platform/frontend/src/app/admin/users/: page.tsx
platform/frontend/src/app/records/: page.tsx
platform/frontend/src/app/records/[id]/: page.tsx
platform/frontend/src/app/share/[id]/: page.tsx  parse-share-url.test.ts  (+1 more)
platform/frontend/src/app/welcome/: page.tsx
platform/frontend/src/components/: admin-nav.tsx  approval-card.tsx  auth-gate.tsx  back-button.tsx  bulk-upload.tsx  cell-log-section.tsx  condition-filter.tsx  conditions-card.tsx  dashboard-chip-row.tsx  login-form.tsx  note-form.tsx  pending-status.tsx  record-table.tsx  request-access-form.tsx  results-card.tsx  scatter-chart.tsx  search-bar.tsx  share-dialog-helpers.test.ts  share-dialog-helpers.ts  share-dialog.tsx  share-events-panel.tsx  share-link-panel.tsx  shared-records-list.test.tsx  shared-records-list.tsx  sortable-record-table.tsx  stats-panel.tsx  summary-chips.tsx  tag-editor.tsx  team-selector.tsx  user-card.tsx  user-menu.tsx  welcome-screen.tsx
platform/frontend/src/components/ui/: dialog.tsx
platform/frontend/src/lib/: api.test.ts  api.ts  auth.tsx  authed-blob.ts  csv.ts  dashboard.ts  firebase.ts  format.test.ts  format.ts  utils.test.ts
scripts/: apply_firestore_indexes.sh  ar_backfill.py  check_mdg_status.py  idx_backfill.py  import_mdg.py  migrate_mdxdb.py  migrate_to_multitenant.py  register_mdg_firestore.py  reimport_mdg.py  run_crater_analysis.py  update_mdg_filesizes.py
src/labvault/: __init__.py
src/labvault/backends/: base.py  embedding.py  firestore.py  firestore_search.py  memory.py  nextcloud.py  platform_client.py  platform_metadata.py  platform_search.py  platform_storage.py
src/labvault/buffer/: __init__.py  database.py  sync.py
src/labvault/cli/: __init__.py  main.py
src/labvault/core/: aggregate.py  builtin_templates.py  config.py  exceptions.py  id.py  lab.py  record.py  results_audit.py  types.py  units.py
src/labvault/mcp/: __init__.py  server.py
src/labvault/parsers/: __init__.py  _analysis.py  base.py  plux.py  vk4.py
src/labvault/parsers/builtin/: __init__.py  ras.py
src/labvault/tracking/: __init__.py  cell_tracker.py  digest.py  namespace.py
tests/: conftest.py
tests/integration/: test_embedding_live.py  test_firestore_live.py  test_nextcloud_live.py
tests/unit/: test_aggregate_bool_guard.py  test_aggregate_core.py  test_ar_backfill.py  test_buffer.py  test_cell_tracker.py  test_cli.py  test_cli_auth.py  test_cli_doctor.py  test_digest.py  test_embedding.py  test_firestore_backend.py  test_firestore_indexes.py  test_id.py  test_idx_backfill.py  test_indexed_pushdown.py  test_lab.py  test_lab_auto_selection.py  test_mcp_server.py  test_memory_backend.py  test_namespace.py  test_nextcloud_backend.py  test_parser_dispatch.py  test_parsers.py  test_platform_metadata.py  test_platform_storage_search.py  test_record.py  test_record_cell_logs.py  test_record_file_api.py  test_record_shares.py  test_result_field_autofill.py  test_results_audit.py  test_results_guards.py  test_sub_template.py  test_sync_manager.py  test_template.py  test_types.py  test_units.py
(+1 files in other folders)
